# PythonBooth

./: .gitignore  README.md  future_ideas.MD  main.py  progress.md  pyproject.toml
src/pythonbooth/: config.py  main.py  models.py  paths.py
src/pythonbooth/services/: __init__.py  atomic_io.py  backup_writer.py  camera_manager.py  canon_guidance.py  capture_pipeline.py  diagnostics.py  hot_folder.py  image_utils.py  library.py  logging_setup.py  naming.py  preflight.py
src/pythonbooth/services/camera_backends/: __init__.py  base.py  canon.py  edsdk.py  simulated.py
src/pythonbooth/ui/: __init__.py  main_window.py  options_dialog.py  secondary_window.py  styles.py  timeline.py  viewer.py
tests/: test_camera_manager.py  test_canon_backend.py  test_canon_guidance.py  test_capture_pipeline.py  test_diagnostics.py  test_library.py  test_naming.py  test_preflight.py  test_raw_preview.py  test_secondary_window.py  test_styles.py
